applications/oauth-jwt-lab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth-jwt-lab
  namespace: applications
  labels:
    app.kubernetes.io/name: oauth-jwt-lab
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: oauth-jwt-lab
